fixed formatting/spacing for clear and result elements

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -90,7 +90,9 @@ body {
 
     color: #fff;
 
-    width: 80px;
+    width: 93.5px;
+
+    margin-left: 5.5rem;
 
     height: 30px;  
 
@@ -128,7 +130,7 @@ body {
 
     font-size: medium;
 
-    width: 50%;
+    width: 100%;
 
     height: 30%;
 
@@ -142,5 +144,7 @@ body {
     margin: auto;
 
     margin-bottom: 10px;
+
+    margin-left: 1rem;
 
 }
